[package]
name = "alpaca_types"
version = "0.1.0"
edition = "2021"

[dependencies]
http-serde = "2.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["parsing", "macros", "serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
