[package]
name = "alpaca_types"
version = "0.1.0"
edition = "2021"

[features]
ts = ["dep:ts-rs"]


[dependencies]
http-serde = "2.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["parsing", "macros", "serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
ts-rs = { version = "10.0.0", optional = true, features = [
    "uuid",
    "uuid-impl",
] }
